--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       
       <div class="card-item suv">
-        <img src="icon-suv.svg" alt="suv-logo">
+        <img src="icon-suvs.svg" alt="suv-logo">
         <h1>SUVs</h1>
         <p>Take an SUV for its spacious interior, power, and                  versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
